--- a/res/values/strings_in.arb
+++ b/res/values/strings_in.arb
@@ -1,10 +1,10 @@
 {
-  "search_for_restaurants_or_foods": "Search for restaurants or foods",
+  "search_for_restaurants_or_foods": "Search for restaurants or drinks",
   "top_restaurants": "Top Restaurants",
   "ordered_by_nearby_first": "Ordered by Nearby first",
   "trending_this_week": "Trending This Week",
-  "double_click_on_the_food_to_add_it_to_the": "Double click on the food to add it to the cart",
-  "food_categories": "Food Categories",
+  "double_click_on_the_food_to_add_it_to_the": "Double click on the item to add it to the cart",
+  "food_categories": "Drink Categories",
   "most_popular": "Most Popular",
   "recent_reviews": "Recent Reviews",
   "login": "Login",
@@ -24,12 +24,12 @@
   "confirm_payment": "Confirm Payment",
   "menu": "Menu",
   "information": "Information",
-  "featured_foods": "Featured Foods",
+  "featured_foods": "Featured Drinks",
   "what_they_say": "What They Say ?",
-  "favorite_foods": "Favorite Foods",
+  "favorite_foods": "Favorite Drinks",
   "g": "g",
   "extras": "Extras",
-  "select_extras_to_add_them_on_the_food": "Select extras to add them on the food",
+  "select_extras_to_add_them_on_the_food": "Select extras to add them on the drink",
   "ingredients": "Ingredients",
   "nutrition": "Nutrition",
   "reviews": "Reviews",
@@ -42,7 +42,7 @@
   "i_dont_have_an_account": "I don't have an account?",
   "maps_explorer": "Maps Explorer",
   "all_menu": "All Menu",
-  "longpress_on_the_food_to_add_suplements": "Longpress on the food to add suplements",
+  "longpress_on_the_food_to_add_suplements": "Longpress on the drink to add suplements",
   "notifications": "Notifications",
   "confirmation": "Confirmation",
   "your_order_has_been_successfully_submitted": "Your order has been successfully submitted!",
@@ -78,14 +78,14 @@
   "multirestaurants": "Multi-Restaurants",
   "tracking_order": "Tracking Order",
   "discover__explorer": "Discover & Explorer",
-  "you_can_discover_restaurants": "You can discover restaurants & fastfood arround you and choose you best meal after few minutes we prepare and delivere it for you",
+  "you_can_discover_restaurants": "You can discover restaurants & drinks arround you and choose you best meal after few minutes we prepare and delivere it for you",
   "reset_cart": "Reset Cart?",
   "cart": "Cart",
   "shopping_cart": "Shopping Cart",
   "verify_your_quantity_and_click_checkout": "Verify your quantity and click checkout",
   "lets_start_with_login": "Let's Start with Login!",
   "should_be_more_than_3_characters": "Should be more than 3 characters",
-  "you_must_add_foods_of_the_same_restaurants_choose_one": "You must add foods of the same restaurants choose one restaurants only!",
+  "you_must_add_foods_of_the_same_restaurants_choose_one": "You must add drink of the same restaurants choose one restaurants only!",
   "reset_your_cart_and_order_meals_form_this_restaurant": "Reset your cart and order meals form this restaurant",
   "keep_your_old_meals_of_this_restaurant": "Keep your old meals of this restaurant",
   "reset": "Reset",
@@ -147,7 +147,7 @@
   "confirm": "Confirm",
   "would_you_please_confirm_if_you_have_delivered_all_meals": "Would you please confirm if you have delivered all meals to client",
   "delivery_confirmation": "Delivery Confirmation",
-  "foods_ordered": "Foods Ordered",
+  "foods_ordered": "Drinks Ordered",
   "order_details": "Order Details",
   "address_not_provided_please_call_the_client": "Address not provided please call the client",
   "address_not_provided_contact_client": "Address not provided contact client",
