--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -78,7 +78,7 @@
   "multirestaurants": "Multi-Restaurantes",
   "tracking_order": "Ordem de rastreamento",
   "discover__explorer": "Discover & Explorer",
-  "you_can_discover_restaurants": "Você pode descobrir restaurantes e fastfood ao seu redor e escolher sua melhor refeição após alguns minutos, nós preparamos e entregamos para você",
+  "you_can_discover_restaurants": "Você pode descobrir restaurantes e drinks ao seu redor e escolher sua melhor refeição após alguns minutos, nós preparamos e entregamos para você",
   "reset_cart": "Redefinir carrinho?",
   "cart": "Carrinho",
   "shopping_cart": "Carrinho de compras",
@@ -147,7 +147,7 @@
   "confirm": "Confirm",
   "would_you_please_confirm_if_you_have_delivered_all_meals": "Would you please confirm if you have delivered all meals to client",
   "delivery_confirmation": "Delivery Confirmation",
-  "foods_ordered": "Foods Ordered",
+  "foods_ordered": "Drinks Ordered",
   "order_details": "Order Details",
   "address_not_provided_please_call_the_client": "Address not provided please call the client",
   "address_not_provided_contact_client": "Address not provided contact client",
