--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -147,7 +147,7 @@
   "confirm": "Confirm",
   "would_you_please_confirm_if_you_have_delivered_all_meals": "Would you please confirm if you have delivered all meals to client",
   "delivery_confirmation": "Delivery Confirmation",
-  "foods_ordered": "Foods Ordered",
+  "foods_ordered": "Drinks Ordered",
   "order_details": "Order Details",
   "address_not_provided_please_call_the_client": "Address not provided please call the client",
   "address_not_provided_contact_client": "Address not provided contact client",
